# Nocturne

./: README.md  com.jeffser.Nocturne.yml  meson.build
data/: com.jeffser.Nocturne.gschema.xml  com.jeffser.Nocturne.metainfo.xml.in
po/: LINGUAS  POTFILES.in  es.po  nocturne.pot  zh-cn.po
src/: actions.py  constants.py  main.py  meson.build  nocturne.gresource.xml  preferences.py  style.css  window.py
src/integrations/: base.py  jellyfin.py  local.py  models.py  navidrome.py
src/navidrome/: __init__.py  local.py  meson.build  models.py  navidrome.py
src/ui/: preferences.blp  window.blp
src/ui/album/: button.blp  page.blp  row.blp
src/ui/artist/: button.blp  page.blp  row.blp
src/ui/containers/: carousel.blp  download_row.blp  wrapbox.blp
src/ui/pages/: albums.blp  albums_all.blp  artists.blp  home.blp  login.blp  playlists.blp  radios.blp  sidebar.blp  songs.blp  songs_starred.blp  welcome.blp
src/ui/playing/: control_page.blp  equalizer_page.blp  footer.blp  lyrics_page.blp  playback_mode_button.blp  popout_window.blp  volume_button.blp
src/ui/playlist/: button.blp  page.blp  row.blp  selector_row.blp
src/ui/song/: queue.blp  row.blp  small_row.blp
src/widgets/: __init__.py
src/widgets/album/: button.py  page.py  row.py
src/widgets/artist/: button.py  page.py  row.py
src/widgets/containers/: __init__.py  carousel.py  context.py  download_row.py  meson.build  wrapbox.py
src/widgets/lyrics/: dialog.py
src/widgets/pages/: __init__.py  albums.py  albums_all.py  artists.py  home.py  login.py  meson.build  playlists.py  radios.py  setup.py  (+5 more)
(+20 files in other folders)
