moduledir = get_option('prefix') / get_option('datadir') / meson.project_name() / 'nocturne' / 'widgets' / 'containers'

widgets = [
  '__init__.py',
  'carousel.py',
  'wrapbox.py',
  'context.py',
  'page_dialog.py',
  'downloads_queue_button.py',
  'download_row.py',
]

install_data(widgets, install_dir: moduledir)